Bug 471056 - 0264500aead34668491577caca182b81e47a51df breaks keyboard keys to change screen brightness
Summary: 0264500aead34668491577caca182b81e47a51df breaks keyboard keys to change scree...
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-06-15 02:55 UTC by Nate Graham
Modified: 2023-06-15 04:26 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-06-15 02:55:31 UTC
So says git bisect.
Comment 1 quangngo 2023-06-15 03:28:54 UTC
Work fine on my laptop using both hardware keys and applet. Some logs might be helpful.
Comment 2 quangngo 2023-06-15 03:34:08 UTC
It breaks my screen brightness keys instead, hmmm
Comment 3 Nate Graham 2023-06-15 03:35:56 UTC
Oh, so sorry, I meant the keyboard keys to control screen brightness are broken, yeah. Not the keyboard keys to control keyboard brightness.
Comment 5 Nate Graham 2023-06-15 04:25:57 UTC
Git commit ebedece5e170c48b4632fdceef72970396906576 by Nate Graham.
Committed on 15/06/2023 at 04:24.
Pushed by ngraham into branch 'master'.

Fix inverted condition for m_screenBrightnessAvailable

This was causing keyboard keys for changing screen brightness to not
work anymore.

M  +1    -1    daemon/backends/upower/powerdevilupowerbackend.cpp

https://invent.kde.org/plasma/powerdevil/-/commit/ebedece5e170c48b4632fdceef72970396906576
Comment 6 Nate Graham 2023-06-15 04:26:23 UTC
Well spotted!