Fix inverted condition for m_screenBrightnessAvailable

This was causing keyboard keys for changing screen brightness to not
work anymore.

BUG: 471056